--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "devDependencies": {
     "h3": "^1.15.4",
-    "nitropack": "^2.12.4"
+    "nitropack": "^2.12.4",
+    "@faker-js/faker": "^9.9.0",
+    "consola": "^3.4.2"
   }
 }
